--- a/articles/386acaf84cebb74565f9.md
+++ b/articles/386acaf84cebb74565f9.md
@@ -1,8 +1,8 @@
 ---
 title: "object-fitを自動でIE11に対応させる"
-emoji: "🐈"
+emoji: "😸"
 type: "tech" # tech: 技術記事 / idea: アイデア
-topics: ["フロントエンド"]
+topics: ["フロントエンド","css"]
 published: false
 ---
 
@@ -61,11 +61,11 @@ $ npm i postcss-object-fit-images -D
 ```
 
 ### postcss.config.jsに追記する
-
 ```javascript:postcss.config.js
 module.exports = {
   plugins: [
-    require('postcss-object-fit-images')
+    //autoprefixerの設定など...
+    require('postcss-object-fit-images'),
   ]
 }
 ```
