--- a/articles/386acaf84cebb74565f9.md
+++ b/articles/386acaf84cebb74565f9.md
@@ -1,9 +1,9 @@
 ---
-title: "object-fitを自動でIE11に対応させる"
+title: "2ステップでobject-fitを自動でIE11に対応させる"
 emoji: "😸"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["フロントエンド","css"]
-published: false
+published: true
 ---
 
 object-fitをIE11でも何も気にせず使いたい人向けの記事です。
