--- a/articles/4a572fd7ae74947a9111.md
+++ b/articles/4a572fd7ae74947a9111.md
@@ -1,9 +1,120 @@
 ---
-title: "WP-CLI"
-emoji: "🥷"
+title: "自分がよく使うWP-CLIまとめ"
+emoji: "🔧"
 type: "tech"
 topics: ["WordPress"]
-published: false
+published: true
 ---
     
-# タイトル
+## WP-CLIとは
+
+> WP-CLI は WordPress を管理するためのコマンドラインインターフェースです。 プラグインのアップデートやマルチサイトのセットアップなどの多くのことをブラウザ無しで行うことができます。
+
+つまり、WordPressの初期設定をコマンドラインから実行できるので、時短ができる感じです。   
+https://wp-cli.org/ja/   
+LocalならビルドインでWP-CLIが使えるので、今回はそれを使っていこうと思います。   
+https://localwp.com/
+
+## 動作環境
+- OS: macOS Big Sur11.2.3
+- Local: 5.10.3
+- WordPress: 5.7.1
+- WP-CLI: 2.5.0-alpha
+
+## コマンド
+
+### WordPressを指定したバージョンに変更する 
+updateだが低い`version`と`--force`を指定することでダウングレードも可能
+```shell
+$ wp core update --version=5.0.0 --force
+``` 
+
+### 日本語化する
+```shell
+$ wp core language install ja --activate
+```
+
+### タイムゾーンをAsia/Tokyoにする
+```shell
+$ wp option update timezone_string 'Asia/Tokyo'
+```
+
+### 日付の形式をY-m-d(2021-01-01)にする
+```shell
+$ wp option update date_format 'Y-m-d'
+```
+
+### 時間の形式をH:i(00:01)にする
+```shell
+$ wp option update time_format 'H:i'
+```
+
+### パーマリンクを/%post_id%/にする
+```shell
+$ wp rewrite structure '/%post_id%/'
+```
+
+### 新しい投稿へのコメントを許可をしない
+```shell
+$ wp option update default_comment_status closed
+```
+
+### すべてのthemeを削除する
+```shell
+$ wp theme delete --all --force
+```
+
+### プラグインをインストールする
+```shell
+# 単数
+$ wp plugin install wp-multibyte-patch
+# 複数
+$ wp plugin install wp-multibyte-patch show-current-template
+```
+#### プラグインをインストールし有効化する
+```shell
+# 単数
+$ wp plugin install wp-multibyte-patch --activate
+# 複数
+$ wp plugin install wp-multibyte-patch show-current-template --activate
+```
+
+### 固定ページを作成する
+```shell
+$ wp post create --post_type=page --post_title="フロントページ" --post_name=front --post_status=Publish --porcelain
+```
+
+
+### フロントページを作成しフロントページの表示設定を作成した固定ページに変更する
+```shell
+$ wp option update show_on_front 'page' && wp option update page_on_front $(wp post create --post_type=page --post_title="フロントページ" --post_status=Publish --porcelain)
+```
+
+### デフォルトの投稿を削除する
+```shell
+$ wp post delete 1 2 3 --force
+```
+
+### 翻訳を更新する
+※先に実行すると翻訳漏れするので必ず最後に実行しましょう
+```shell
+$ wp core language update
+```
+
+### すべてまとめる😎
+```shell
+$ wp core language install ja --activate && wp option update timezone_string 'Asia/Tokyo' && wp option update date_format 'Y-m-d' && wp option update time_format 'H:i' && wp rewrite structure '/%post_id%/' && wp option update default_comment_status closed && wp theme delete --all --force && wp plugin install wp-multibyte-patch && wp plugin install show-current-template --activate && wp option update show_on_front 'page' && wp option update page_on_front $(wp post create --post_type=page --post_title="フロントページ" --post_status=Publish --porcelain) && wp post delete 1 2 3 --force && wp core language update
+```
+たった一行で以下のことができます。
+- 日本語化
+- タイムゾーン変更
+- 日付の形式変更
+- 時間の形式変更
+- パーマリンク変更
+- 新しい投稿へのコメントを許可をしない
+- すべてのthemeを削除する
+- プラグインをインストールする
+- プラグインをインストールし有効化する
+- フロントページを作成しフロントページの表示設定を作成した固定ページに変更する
+- デフォルトの投稿を削除する
+- 翻訳を更新する
