--- a/articles/ef1f12f9888064.md
+++ b/articles/ef1f12f9888064.md
@@ -6,10 +6,29 @@ topics: ["tailwind"]
 published: false
 ---
 
-Next.jsがv11でeslintがビルドインで設定されているので今回はこれにwith tailwindcssをしたものでやっていきます😎
+eslintの設定めんどくさいですよね🤔   
+Next.jsではv11からeslintがビルドインになったので、前から気になっていた`eslint-plugin-tailwindcss`を触ってみたいと思います。   
+なお、今回は`npx create-next-app --ts`したものに`tailwindcss`を追加したものでやっていきます😎
 
-index.tsxは下記のリポジトリから拝借
+## モチベーション
+- 人によって順番が違うclassの並びを`自動で修正したい`
+- typoを検知したい
+- `breaking change`などでclass名が無効の場合検知したい
+- `tailwind.confg.js`を解析してエラーを吐いてほしい
+
+## 機能
+- classNameを自動で並び替えてくれる
+- tailwindのclass名や指定されたcss以外のclassだとエラーを出す
+- 同一のプロパティが重複している場合エラーを出す
+- `JIT`対応
+
+こんな感じ🤔
+https://github.com/francoismassart/eslint-plugin-tailwindcss#supported-rules
+
+### index.tsxをtailwind仕様に書き換える
+index.tsxは下記のリポジトリ`with tailwindcss`から拝借
 https://github.com/vercel/next.js/blob/canary/examples/with-tailwindcss/pages/index.js
+
 ```tsx:index.tsx
 import Head from 'next/head'
 import Image from "next/image"
@@ -94,13 +113,16 @@ export default function Home() {
     </div>
   )
 }
-
 ```
+
 ## セットアップ
+
+### eslint-plugin-tailwindcssをインストール
 ```shell
 $ npm i -D eslint-plugin-tailwindcss
 ```
 
+### .eslintrcに追記
 ```diff json:.eslintrc
 {
   "extends": [
@@ -112,3 +134,151 @@ $ npm i -D eslint-plugin-tailwindcss
 }
 
 ```
+
+## とりあえず、リンターを走らせてみる
+
+### npm run lintを実行
+```shell
+$ npm run lint
+
+> next-eslint-plugin-tailwindcss@0.1.0 lint
+> next lint
+
+info  - Using webpack 5. Reason: Enabled by default https://nextjs.org/docs/messages/webpack5
+
+./src/pages/index.tsx
+6:10  Warning: Invalid Tailwind CSS classnames order  tailwindcss/classnames-order
+12:13  Warning: Invalid Tailwind CSS classnames order  tailwindcss/classnames-order
+27:14  Warning: Invalid Tailwind CSS classnames order  tailwindcss/classnames-order
+30:13  Warning: Invalid Tailwind CSS classnames order  tailwindcss/classnames-order
+40:13  Warning: Invalid Tailwind CSS classnames order  tailwindcss/classnames-order
+50:13  Warning: Invalid Tailwind CSS classnames order  tailwindcss/classnames-order
+60:13  Warning: Invalid Tailwind CSS classnames order  tailwindcss/classnames-order
+70:15  Warning: Invalid Tailwind CSS classnames order  tailwindcss/classnames-order
+72:11  Warning: Invalid Tailwind CSS classnames order  tailwindcss/classnames-order
+78:77  Warning: Invalid Tailwind CSS classnames order  tailwindcss/classnames-order
+```
+
+めちゃくちゃ怒られる😖
+
+## 自動修正させる
+
+### scriptsにfixを追記
+```diff json:package.json
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
++   "fix:lint": "next lint --fix"
+  },
+```
+
+### npm run fix:lintを実行
+```shell
+$ npm run fix:lint
+
+> next-eslint-plugin-tailwindcss@0.1.0 fix:lint
+> next lint --fix
+
+info  - Using webpack 5. Reason: Enabled by default https://nextjs.org/docs/messages/webpack5
+✔ No ESLint warnings or errors
+```
+
+```diff tsx:index.tsx
+import Head from 'next/head'
+import Image from "next/image"
+
+export default function Home() {
+  return (
+-   <div className="flex flex-col items-center justify-center min-h-screen py-2">
++   <div className="flex flex-col justify-center items-center py-2 min-h-screen">
+      <Head>
+        <title>Create Next App</title>
+        <link rel="icon" href="/favicon.ico" />
+      </Head>
+
+-     <main className="flex flex-col items-center justify-center w-full flex-1 px-20 text-center">
++     <main className="flex flex-col flex-1 justify-center items-center px-20 w-full text-center">
+        <h1 className="text-6xl font-bold">
+          Welcome to{' '}
+          <a className="text-blue-600" href="https://nextjs.org">
+            Next.js!
+          </a>
+        </h1>
+
+        <p className="mt-3 text-2xl">
+          Get started by editing{' '}
+          <code className="p-3 font-mono text-lg bg-gray-100 rounded-md">
+            pages/index.js
+          </code>
+        </p>
+
+-       <div className="flex flex-wrap items-center justify-around max-w-4xl mt-6 sm:w-full">
++       <div className="flex flex-wrap justify-around items-center mt-6 sm:w-full max-w-4xl">
+          <a
+            href="https://nextjs.org/docs"
+-           className="p-6 mt-6 text-left border w-96 rounded-xl hover:text-blue-600 focus:text-blue-600"
++           className="p-6 mt-6 w-96 text-left hover:text-blue-600 focus:text-blue-600 rounded-xl border"
+          >
+            <h3 className="text-2xl font-bold">Documentation &rarr;</h3>
+            <p className="mt-4 text-xl">
+              Find in-depth information about Next.js features and API.
+            </p>
+          </a>
+
+          <a
+            href="https://nextjs.org/learn"
+-           className="p-6 mt-6 text-left border w-96 rounded-xl hover:text-blue-600 focus:text-blue-600"
++           className="p-6 mt-6 w-96 text-left hover:text-blue-600 focus:text-blue-600 rounded-xl border"
+          >
+            <h3 className="text-2xl font-bold">Learn &rarr;</h3>
+            <p className="mt-4 text-xl">
+              Learn about Next.js in an interactive course with quizzes!
+            </p>
+          </a>
+
+          <a
+            href="https://github.com/vercel/next.js/tree/master/examples"
+-           className="p-6 mt-6 text-left border w-96 rounded-xl hover:text-blue-600 focus:text-blue-600"
++           className="p-6 mt-6 w-96 text-left hover:text-blue-600 focus:text-blue-600 rounded-xl border"
+          >
+            <h3 className="text-2xl font-bold">Examples &rarr;</h3>
+            <p className="mt-4 text-xl">
+              Discover and deploy boilerplate example Next.js projects.
+            </p>
+          </a>
+
+          <a
+            href="https://vercel.com/import?filter=next.js&utm_source=create-next-app&utm_medium=default-template&utm_campaign=create-next-app"
+-           className="p-6 mt-6 text-left border w-96 rounded-xl hover:text-blue-600 focus:text-blue-600"
++           className="p-6 mt-6 w-96 text-left hover:text-blue-600 focus:text-blue-600 rounded-xl border"
+          >
+            <h3 className="text-2xl font-bold">Deploy &rarr;</h3>
+            <p className="mt-4 text-xl">
+              Instantly deploy your Next.js site to a public URL with Vercel.
+            </p>
+          </a>
+        </div>
+      </main>
+
+-     <footer className="flex items-center justify-center w-full h-24 border-t">
++     <footer className="flex justify-center items-center w-full h-24 border-t">
+        <a
+-         className="flex items-center justify-center"
++         className="flex justify-center items-center"
+          href="https://vercel.com?utm_source=create-next-app&utm_medium=default-template&utm_campaign=create-next-app"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          Powered by{' '}
+-         <Image src="/vercel.svg" alt="Vercel Logo" width={72} height={16} className="h-4 ml-2" />
++         <Image src="/vercel.svg" alt="Vercel Logo" width={72} height={16} className="ml-2 h-4" />
+        </a>
+      </footer>
+    </div>
+  )
+}
+```
+
+並び順がきれいに揃った！😺
