--- a/articles/ef1f12f9888064.md
+++ b/articles/ef1f12f9888064.md
@@ -6,7 +6,7 @@ topics: ["tailwind"]
 published: false
 ---
 
-eslintの設定めんどくさいですよね🤔   
+eslintの設定めんどくさいですよね😖   
 Next.jsではv11からeslintがビルドインになったので、前から気になっていた`eslint-plugin-tailwindcss`を触ってみたいと思います。   
 なお、今回は`npx create-next-app --ts`したものに`tailwindcss`を追加したものでやっていきます😎
 
