--- a/articles/ef1f12f9888064.md
+++ b/articles/ef1f12f9888064.md
@@ -282,3 +282,58 @@ export default function Home() {
 ```
 
 並び順がきれいに揃った！😺
+
+## typoしてみる
+
+```tsx:index.tsx
+<h1 className="text-6x font-bold">
+  Welcome to{' '}
+  <a className="text-blue-600" href="https://nextjs.org">
+    Next.js!
+  </a>
+</h1>
+```
+
+```shell
+$ npm run lint
+
+> next-eslint-plugin-tailwindcss@0.1.0 lint
+> next lint
+
+info  - Using webpack 5. Reason: Enabled by default https://nextjs.org/docs/messages/webpack5
+
+./src/pages/index.tsx
+13:13  Warning: Invalid Tailwind CSS classnames order  tailwindcss/classnames-order
+13:13  Warning: Classname 'text-6x' is not a Tailwind CSS class!  tailwindcss/no-custom-classname
+
+Need to disable some ESLint rules? Learn more here: https://nextjs.org/docs/basic-features/eslint#disabling-rules
+```
+
+## Breaking Changeをしてみる
+https://tailwindcss.com/docs/upgrading-to-v2#update-renamed-utility-classes
+
+1xでは`whitespace-no-wrap`だったものが2xでは`whitespace-nowrap`に変わったので試してみる
+
+```tsx:index.tsx
+<h1 className="text-6x font-bold whitespace-no-wrap">
+  Welcome to{' '}
+  <a className="text-blue-600" href="https://nextjs.org">
+    Next.js!
+  </a>
+</h1>
+```
+
+```shell
+$ npm run lint
+
+> next-eslint-plugin-tailwindcss@0.1.0 lint
+> next lint
+
+info  - Using webpack 5. Reason: Enabled by default https://nextjs.org/docs/messages/webpack5
+
+./src/pages/index.tsx
+13:13  Warning: Classname 'whitespace-no-wrap' is not a Tailwind CSS class!  tailwindcss/no-custom-classname
+
+Need to disable some ESLint rules? Learn more here: https://nextjs.org/docs/basic-features/eslint#disabling-rules
+```
+ちゃんとエラーが出た！
