📝 add official url

--- a/articles/ef1f12f9888064.md
+++ b/articles/ef1f12f9888064.md
@@ -10,11 +10,15 @@ eslintの設定めんどくさいですよね😖
 Next.jsではv11からeslintがビルドインになったので、前から気になっていた`eslint-plugin-tailwindcss`を触ってみたいと思います。   
 なお、今回は`npx create-next-app --ts`したものに`tailwindcss`を追加したものでやっていきます😎
 
+公式はこちら
+https://github.com/francoismassart/eslint-plugin-tailwindcss
+
 ## モチベーション
 - 人によって順番が違うclassの並びを`自動で修正したい`
 - typoを検知したい
 - `breaking change`などでclass名が無効の場合検知したい
 - `tailwind.confg.js`を解析してエラーを吐いてほしい
+
 
 ## 機能
 - classNameを自動で並び替えてくれる
