--- a/articles/ef1f12f9888064.md
+++ b/articles/ef1f12f9888064.md
@@ -312,6 +312,7 @@ info  - Using webpack 5. Reason: Enabled by default https://nextjs.org/docs/mess
 
 Need to disable some ESLint rules? Learn more here: https://nextjs.org/docs/basic-features/eslint#disabling-rules
 ```
+`Warning: Classname 'text-6x' is not a Tailwind CSS class!  tailwindcss/no-custom-classname`エラーが出た！
 
 ## Breaking Changeをしてみる
 https://tailwindcss.com/docs/upgrading-to-v2#update-renamed-utility-classes
@@ -340,4 +341,75 @@ info  - Using webpack 5. Reason: Enabled by default https://nextjs.org/docs/mess
 
 Need to disable some ESLint rules? Learn more here: https://nextjs.org/docs/basic-features/eslint#disabling-rules
 ```
-ちゃんとエラーが出た！
+こっちも`Warning: Classname 'whitespace-no-wrap' is not a Tailwind CSS class!  tailwindcss/no-custom-classname`と出た
+
+## JITで試してみる
+
+```tsx:index.tsx
+<h1 className="text-[10rem] font-bold whitespace-no-wrap">
+  Welcome to{' '}
+  <a className="text-blue-600" href="https://nextjs.org">
+    Next.js!
+  </a>
+</h1>
+```
+
+```shell
+$ npm run lint
+
+> next-eslint-plugin-tailwindcss@0.1.0 lint
+> next lint
+
+info  - Using webpack 5. Reason: Enabled by default https://nextjs.org/docs/messages/webpack5
+✔ No ESLint warnings or errors
+```
+ちゃんと対応してる😺
+
+### 単位を間違えていて動かない場合
+```tsx:index.tsx
+<h1 className="text-[10re] font-bold whitespace-nowrap">
+  Welcome to{' '}
+  <a className="text-blue-600" href="https://nextjs.org">
+    Next.js!
+  </a>
+</h1>
+```
+
+```shell
+$ npm run lint
+
+> next-eslint-plugin-tailwindcss@0.1.0 lint
+> next lint
+
+info  - Using webpack 5. Reason: Enabled by default https://nextjs.org/docs/messages/webpack5
+✔ No ESLint warnings or errors
+```
+エラーは出ないらしい
+
+### tailwindの命名に則らない形で記述する
+
+```tsx:index.tsx
+<h1 className="text-size-[10rem] font-bold whitespace-nowrap">
+  Welcome to{' '}
+  <a className="text-blue-600" href="https://nextjs.org">
+    Next.js!
+  </a>
+</h1>
+```
+
+```shell
+$ npm run lint
+
+> next-eslint-plugin-tailwindcss@0.1.0 lint
+> next lint
+
+info  - Using webpack 5. Reason: Enabled by default https://nextjs.org/docs/messages/webpack5
+
+./src/pages/index.tsx
+13:13  Warning: Invalid Tailwind CSS classnames order  tailwindcss/classnames-order
+13:13  Warning: Classname 'text-size-[10rem]' is not a Tailwind CSS class!  tailwindcss/no-custom-classname
+
+Need to disable some ESLint rules? Learn more here: https://nextjs.org/docs/basic-features/eslint#disabling-rules
+```
+
+`Warning: Classname 'text-size-[10rem]' is not a Tailwind CSS class!  tailwindcss/no-custom-classname`エラーが出る
