📝 add jit in tailwind.config,js

--- a/articles/ef1f12f9888064.md
+++ b/articles/ef1f12f9888064.md
@@ -345,8 +345,27 @@ Need to disable some ESLint rules? Learn more here: https://nextjs.org/docs/basi
 
 ## JITで試してみる
 
+```diff js:tailwind.confg.js
+module.exports = {
+  purge: [
+    './src/**/*.tsx',
+    './src/**/*.ts',
+  ],
++ mode: 'jit',
+  darkMode: false, // or 'media' or 'class'
+  theme: {
+    extend: {},
+  },
+  variants: {
+    extend: {},
+  },
+  plugins: [],
+}
+
+```
+
 ```tsx:index.tsx
-<h1 className="text-[10rem] font-bold whitespace-no-wrap">
+<h1 className="text-[10rem] font-bold">
   Welcome to{' '}
   <a className="text-blue-600" href="https://nextjs.org">
     Next.js!
