📝 remove unused codes

--- a/articles/ef1f12f9888064.md
+++ b/articles/ef1f12f9888064.md
@@ -386,7 +386,7 @@ info  - Using webpack 5. Reason: Enabled by default https://nextjs.org/docs/mess
 
 ### 単位を間違えていて動かない場合
 ```tsx:index.tsx
-<h1 className="text-[10re] font-bold whitespace-nowrap">
+<h1 className="text-[10re] font-bold">
   Welcome to{' '}
   <a className="text-blue-600" href="https://nextjs.org">
     Next.js!
@@ -408,7 +408,7 @@ info  - Using webpack 5. Reason: Enabled by default https://nextjs.org/docs/mess
 ### tailwindの命名に則らない形で記述する
 
 ```tsx:index.tsx
-<h1 className="text-size-[10rem] font-bold whitespace-nowrap">
+<h1 className="text-size-[10rem] font-bold">
   Welcome to{' '}
   <a className="text-blue-600" href="https://nextjs.org">
     Next.js!
