📝 add tailwind.config.js

--- a/articles/ef1f12f9888064.md
+++ b/articles/ef1f12f9888064.md
@@ -432,3 +432,185 @@ Need to disable some ESLint rules? Learn more here: https://nextjs.org/docs/basi
 ```
 
 `Warning: Classname 'text-size-[10rem]' is not a Tailwind CSS class!  tailwindcss/no-custom-classname`エラーが出る
+
+## tailwind.configを読んでくれるか試してみる
+
+```diff js:tailwind.confg.js
+module.exports = {
+  purge: [
+    './src/**/*.tsx',
+    './src/**/*.ts',
+  ],
+  darkMode: false, // or 'media' or 'class'
+  theme: {
+    extend: {
+      fontSize: {
++       '10xl': '10rem',
+      }
+    },
+  },
+  variants: {
+    extend: {},
+  },
+  plugins: [],
+}
+
+```
+
+```tsx:index.tsx
+<h1 className="text-10xl font-bold">
+  Welcome to{' '}
+  <a className="text-blue-600" href="https://nextjs.org">
+    Next.js!
+  </a>
+</h1>
+```
+
+```shell
+$ npm run lint
+
+> next-eslint-plugin-tailwindcss@0.1.0 lint
+> next lint
+
+info  - Using webpack 5. Reason: Enabled by default https://nextjs.org/docs/messages/webpack5
+✔ No ESLint warnings or errors
+```
+
+### 独自のutilityを追加してみる
+
+```diff js:tailwind.confg.js
++ const plugin = require('tailwindcss/plugin');
+
+module.exports = {
+  purge: [
+    './src/**/*.tsx',
+    './src/**/*.ts',
+  ],
+  darkMode: false, // or 'media' or 'class'
+  theme: {
+    extend: {},
+  },
+  variants: {
+    extend: {},
+  },
+  plugins: [
++   plugin(({ addUtilities }) => {
++     const newUtilities = {
++       '.skew-10deg': {
++         transform: 'skewY(-10deg)',
++       }
++     }
++     addUtilities(newUtilities)
++  })
+  ]
+}
+
+```
+
+```tsx:index.tsx
+<h1 className="text-6xl font-bold skew-10deg">
+  Welcome to{' '}
+  <a className="text-blue-600" href="https://nextjs.org">
+    Next.js!
+  </a>
+</h1>
+```
+
+```shell
+$ npm run lint
+
+> next-eslint-plugin-tailwindcss@0.1.0 lint
+> next lint
+
+info  - Using webpack 5. Reason: Enabled by default https://nextjs.org/docs/messages/webpack5
+
+./src/pages/index.tsx
+13:13  Warning: Classname 'skew-10deg' is not a Tailwind CSS class!  tailwindcss/no-custom-classname
+
+Need to disable some ESLint rules? Learn more here: https://nextjs.org/docs/basic-features/eslint#disabling-rules
+```
+へーエラー出るのか😂
+設定間違えたかな🤔
+
+### エラー出ないようにする
+ホワイトリストに正規表現でぶちこめばいいらしい
+
+```diff json:.eslintrc
+{
+  "extends": [
+    "next",
+    "next/core-web-vitals",
+    "plugin:tailwindcss/recommended"
+  ],
+  "plugins": ["tailwindcss"],
+  "settings": {
+    "tailwindcss": {
++     "whitelist": ["skew\\-[1]?[\\d]deg"]
+    }
+  }
+}
+```
+
+```shell
+$ npm run lint
+
+> next-eslint-plugin-tailwindcss@0.1.0 lint
+> next lint
+
+info  - Using webpack 5. Reason: Enabled by default https://nextjs.org/docs/messages/webpack5
+✔ No ESLint warnings or errors
+```
+
+エラーが消えた😺
+正直めんどくさいので、`.eslintrc`を`.eslintrc.js`に変更して独自のutilityの値の配列を渡してあげれば自動で同期できそう
+tailwindの`fullConfig`からpluginsの値が取得できない？っぽい
+
+#### ついでに自動同期
+
+```js:newUtilities.js
+exports.newUtilities = {
+  '.skew-10deg': {
+    transform: 'skewY(-10deg)',
+  }
+};
+```
+
+```diff js:tailwind.config.js
+const plugin = require('tailwindcss/plugin');
+const newUtilities = require('./newUtilities');
+
+module.exports = {
+  purge: [
+    './src/**/*.tsx',
+    './src/**/*.ts',
+  ],
+  darkMode: false, // or 'media' or 'class'
+  theme: {
+    extend: {},
+  },
+  variants: {
+    extend: {},
+  },
+  plugins: [
++   plugin(({ addUtilities }) => addUtilities(newUtilities))
+  ]
+};
+```
+
+```diff js:.eslintrc.js
++const {newUtilities} = require('./newUtilities');
+
+module.exports = {
+  "extends": [
+    "next",
+    "next/core-web-vitals",
+    "plugin:tailwindcss/recommended"
+  ],
+  "plugins": ["tailwindcss"],
+  "settings": {
+    "tailwindcss": {
++     "whitelist": Object.keys(newUtilities).map((n) => n.replace(/^\./,''))
+    }
+  }
+};
+```
