📝 add global & css modules

--- a/articles/ef1f12f9888064.md
+++ b/articles/ef1f12f9888064.md
@@ -614,3 +614,81 @@ module.exports = {
   }
 };
 ```
+
+### global cssやCSS Modulesを試す
+
+#### globals.css
+```diff css:globals.css
+html,
+body {
+  padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+* {
+  box-sizing: border-box;
+}
+
++.h1 {
++ font-size: 10rem;
++}
+```
+
+```tsx:index.tsx
+<h1 className="h1 font-bold">
+  Welcome to{' '}
+  <a className="text-blue-600" href="https://nextjs.org">
+    Next.js!
+  </a>
+</h1>
+```
+
+```shell
+$ npm run lint
+
+> next-eslint-plugin-tailwindcss@0.1.0 lint
+> next lint
+
+info  - Using webpack 5. Reason: Enabled by default https://nextjs.org/docs/messages/webpack5
+
+./src/pages/index.tsx
+13:13  Warning: Invalid Tailwind CSS classnames order  tailwindcss/classnames-order
+
+Need to disable some ESLint rules? Learn more here: https://nextjs.org/docs/basic-features/eslint#disabling-rules
+```
+並び替えのエラーしか出ていないので、大丈夫みたい
+
+#### CSS Modules
+
+```css:Home.module.css
+.h1 {
+  font-size: 10rem;
+}
+```
+
+```tsx:index.tsx
+import styles from './Home.module.css';
+<h1 className={`${styles.h1} font-bold`}>
+  Welcome to{' '}
+  <a className="text-blue-600" href="https://nextjs.org">
+    Next.js!
+  </a>
+</h1>
+```
+
+```shell
+$ npm run lint
+
+> next-eslint-plugin-tailwindcss@0.1.0 lint
+> next lint
+
+info  - Using webpack 5. Reason: Enabled by default https://nextjs.org/docs/messages/webpack5
+✔ No ESLint warnings or errors
+```
