--- a/articles/ef1f12f9888064.md
+++ b/articles/ef1f12f9888064.md
@@ -343,6 +343,32 @@ Need to disable some ESLint rules? Learn more here: https://nextjs.org/docs/basi
 ```
 こっちも`Warning: Classname 'whitespace-no-wrap' is not a Tailwind CSS class!  tailwindcss/no-custom-classname`と出た
 
+## 重複を試してみる
+
+```tsx:index.tsx
+<h1 className="text-5xl text-6xl font-bold">
+  Welcome to{' '}
+  <a className="text-blue-600" href="https://nextjs.org">
+    Next.js!
+  </a>
+</h1>
+```
+
+```shell
+$ npm run lint
+
+> next-eslint-plugin-tailwindcss@0.1.0 lint
+> next lint
+
+info  - Using webpack 5. Reason: Enabled by default https://nextjs.org/docs/messages/webpack5
+
+./src/pages/index.tsx
+13:13  Error: Classnames text-5xl, text-6xl are conflicting!  tailwindcss/no-contradicting-classname
+
+Need to disable some ESLint rules? Learn more here: https://nextjs.org/docs/basic-features/eslint#disabling-rules
+```
+`Error: Classnames text-5xl, text-6xl are conflicting!  tailwindcss/no-contradicting-classname`エラーが出た
+
 ## JITで試してみる
 
 ```diff js:tailwind.confg.js
