--- a/articles/ef1f12f9888064.md
+++ b/articles/ef1f12f9888064.md
@@ -718,3 +718,9 @@ $ npm run lint
 info  - Using webpack 5. Reason: Enabled by default https://nextjs.org/docs/messages/webpack5
 ✔ No ESLint warnings or errors
 ```
+
+## まとめ
+- 治安が悪くなりがちなtailwindのclassがいい感じになりそう 
+- pluginsとjitには注意が必要そう。
+
+個人的にはbreakpointsでソートされている方が好みなので、オプションの`groupByResponsive`を`true`にしたいと思う。
