--- a/articles/ef1f12f9888064.md
+++ b/articles/ef1f12f9888064.md
@@ -724,3 +724,6 @@ info  - Using webpack 5. Reason: Enabled by default https://nextjs.org/docs/mess
 - pluginsとjitには注意が必要そう。
 
 個人的にはbreakpointsでソートされている方が好みなので、オプションの`groupByResponsive`を`true`にしたいと思う。
+
+## 今回使ったリポジトリ
+https://github.com/hisho/next-eslint-plugin-tailwindcss
