--- a/articles/ef1f12f9888064.md
+++ b/articles/ef1f12f9888064.md
@@ -3,7 +3,7 @@ title: "eslint-plugin-tailwindcssを触ってみる"
 emoji: "🚨"
 type: "tech" # tech: 技術記事 / idea: アイデア
 topics: ["tailwind"]
-published: false
+published: true
 ---
 
 eslintの設定めんどくさいですよね😖   
