--- a/articles/28549ebdaf54cb.md
+++ b/articles/28549ebdaf54cb.md
@@ -3,7 +3,7 @@ title: "chakra-uiで特定のコンポーネントを呼び出した時のみglo
 emoji: "🙃"
 type: "tech"
 topics: ["chakraui","react"]
-published: false
+published: true
 ---
 
 app全体のglobal styleを当てたい場合はChakraProviderに渡すthemeに書けば良いけど、特定のコンポーネントを呼び出した時はどうすれば良いだろう？🤔
