--- a/articles/28549ebdaf54cb.md
+++ b/articles/28549ebdaf54cb.md
@@ -17,7 +17,7 @@ https://emotion.sh/docs/globals
 ```tsx
 import { Global } from '@emotion/react'
 
-export const AnyComponentWithGlobalStyle = () => {
+export const MyComponentWithGlobalStyle = () => {
   return (
     <>
       <Global
@@ -27,10 +27,39 @@ export const AnyComponentWithGlobalStyle = () => {
           },
         }}
       />
-      <AnyComponent />
+      <MyComponent />
     </>
   )
 }
 ```
 サードパーティ製コンポーネントが独自のcssに依存していてオーバーライドしたい場合やリプレイス中で使える
 
+## おまけ
+
+keyに変数を使う場合   
+JavaScriptのオブジェクトのkeyに変数を使うのと同じ
+
+
+```tsx
+import { Global } from '@emotion/react'
+
+export const MyComponentWithGlobalStyle = () => {
+  const id = 'myComponent'
+  
+  return (
+    <>
+      <Global
+        styles={{
+          [`#${id}`]: {
+            backgroundColor: 'red',
+            a: {
+              color: 'blue'
+            }
+          },
+        }}
+      />
+      <MyComponent id={id} />
+    </>
+  )
+}
+```
