--- a/articles/e10a65116da3d4.md
+++ b/articles/e10a65116da3d4.md
@@ -3,7 +3,7 @@ title: "Next.jsでGMO PAYMENT GATEWAYのトークン決済を実装する"
 emoji: "👽"
 type: "tech"
 topics: [nextjs,typescript,react]
-published: ture
+published: true
 ---
 
 参考にさせていただいた記事
