--- a/articles/fe9f4ec4a8e691.md
+++ b/articles/fe9f4ec4a8e691.md
@@ -3,13 +3,21 @@ title: "Next.jsのLayouts"
 emoji: "🤝"
 type: "tech"
 topics: ["nextjs","react","typescript"]
-published: false
+published: true
 ---
-Next.jsのLayoutについてTypeScriptの記事を探してもあまり見つからなかったのでまとめる
+Next.jsのLayoutについてTypeScriptの記事を探してもあまり見つからなかったので
 https://nextjs.org/docs/basic-features/layouts
 
-ページを横断する共通のコンポーネントを制御する機能😎
-コンポーネントの状態（入力値など）も保持される🤝
+## Layoutsとは🤔
+ページ間で共通のコンポーネントを定義する機能   
+HeaderやFooterなどはほぼ全ページ同じレイアウトを使うけど、ページコンポーネントに直接書くとコンポーネントの状態（入力値など）が保持できないのでページコンポーネントの外に書くことでレイアウトの状態も保持できる🤝   
+
+## 検証に使ったリポジトリ
+https://github.com/hisho/next-layouts-demo
+
+### Next.jsのLayoutsを使うと何が嬉しいのか
+一部共通ではないページが有る場合もページ単位でLayoutを変えられるので対応可能😎    
+下記の共通コンポーネントをNext.jsのLayoutsに置き換えてみる
 
 ## 共通のcomponents
 ```tsx:components/Header/Header.tsx
@@ -160,5 +168,5 @@ Work.getLayout = (page) => (
 export default Work
 ```
 
-## リポジトリ
-https://github.com/hisho/next-layout
+## おまけ
+`AppPropsWithLayout`を拡張して色々できそうなので、面白いことができたらまた記事を書くかも😏
