--- a/articles/fe9f4ec4a8e691.md
+++ b/articles/fe9f4ec4a8e691.md
@@ -77,7 +77,9 @@ export default MyApp
 
 絶対共通のLayoutになるとは限らないしデメリットの方が大きいので、Next.jsのLayoutsを使いページ単位で共通するLayoutを定義した方が良い☺️
 
-## nextの型を拡張する
+## Next.jsのLayoutsを使うパターン
+
+### nextの型を拡張する
 型は公式から引用
 https://nextjs.org/docs/basic-features/layouts#with-typescript
 ```ts:types/index.d.ts
@@ -97,7 +99,7 @@ declare module 'next/app' {
   }
 }
 ```
-## _app.tsxにgetLayoutを追記する
+### _app.tsxにgetLayoutを追記する
 Component.getLayoutがない場合はそのままpageを返す
 ```diff tsx:pages/_app.tsx
 -import type { AppProps } from 'next/app'
@@ -118,8 +120,8 @@ Component.getLayoutがない場合はそのままpageを返す
 export default MyApp
 ```
 
-## 共通レイアウトを各ページで呼び出す
-### pages/index.tsxにgetLayoutを追記する
+### 共通レイアウトを各ページで呼び出す
+#### pages/index.tsxにgetLayoutを追記する
 ```diff tsx:pages/index.tsx
 -import type { NextPage } from 'next'
 +import type { NextPageWithLayout } from 'next'
@@ -134,7 +136,7 @@ import { HomePage } from '@src/component/pages/Home'
 export default Home
 ```
 
-### pages/about/index.tsxにgetLayoutを追記する
+#### pages/about/index.tsxにgetLayoutを追記する
 ```diff tsx:pages/about/index.tsx
 -import type { NextPage } from 'next'
 +import type { NextPageWithLayout } from 'next'
@@ -149,7 +151,7 @@ import { AboutPage } from '@src/component/pages/About'
 export default About
 ```
 
-## 別のLayoutを適応したい時
+### 別のLayoutを適応したい時
 
 ```tsx:pages/work/index.tsx
 import type { NextPageWithLayout } from 'next'
