--- a/articles/e8f809db5415e8.md
+++ b/articles/e8f809db5415e8.md
@@ -2,8 +2,8 @@
 title: "zodのエラーメッセージの日本語化とカスタマイズ"
 emoji: "🌐"
 type: "tech"
-topics: ["zod","i18n","typescript"]
-published: false
+topics: ["zod","i18n","typescript","nextjs"]
+published: true
 ---
 zodに入門しました。   
 型生成できたり、`preprocess`とか便利ですね😎
