--- a/articles/2fee2477509713.md
+++ b/articles/2fee2477509713.md
@@ -1,9 +1,9 @@
 ---
 title: "Mantineでthemeのmedia queryを楽に使いたい"
-emoji: "😎"
+emoji: "🔫"
 type: "tech"
 topics: ["mantine","typescript"]
-published: false
+published: true
 ---
 
 mantineでレスポンシブ対応するときに``[`@media (max-width: ${theme.breakpoints.xl}px)`]``といちいち書くのはめんどくさい🙃
