📝 iikanzi no name

--- a/articles/2fee2477509713.md
+++ b/articles/2fee2477509713.md
@@ -1,5 +1,5 @@
 ---
-title: "Mantineでthemeのmedia queryを楽に使いたい"
+title: "Mantineでのレスポンシブ"
 emoji: "🔫"
 type: "tech"
 topics: ["mantine","typescript"]
