--- a/articles/e8f809db5415e8.md
+++ b/articles/e8f809db5415e8.md
@@ -10,12 +10,17 @@ zodに入門しました。
 zodのエラーメッセージをカスタマイズする日本語の記事がなかったので色々調べてみた   
 ついでにNext.jsのi18nと連携してみた
 
+<br />
+![zod demo](https://user-images.githubusercontent.com/56404715/166149615-d6d3fdb5-084c-41d7-987a-09995fcdc570.gif)
+
 ## リポジトリ
 https://github.com/hisho/nextjs-with-zod-i18n
 
 ## デモ
 デモではchakraとreact-hook-formを使っています。
-@[codesandbox](https://codesandbox.io/embed/sweet-sea-gecs81?fontsize=14&hidenavigation=1&theme=dark)
+
+@[codesandbox](https://codesandbox.io/embed/github/hisho/nextjs-with-zod-i18n/tree/main/?fontsize=14&hidenavigation=1&theme=dark)
+
 https://nextjs-with-zod-i18n-demo.vercel.app/
 
 ## オリジナルなエラーメッセージ
@@ -307,43 +312,28 @@ z.setErrorMap(zodCustomErrorMap())
 
 ## Nextと連携する
 
-```tsx:ZodErrorMap.tsx
-
-import { ReactElement } from 'react'
-import { z } from 'zod'
+```tsx:_app.tsx
+import type { AppProps } from 'next/app'
+import { useLocale } from '@src/hooks/useLocale'
 import { zodCustomErrorMap } from '@src/libs/validation/zodCustomErrorMap'
-
-type ZodErrorMapProps = Required<{
-  children: ReactElement
-}>
+import { z } from 'zod'
 
 /**
  * @see https://github.com/colinhacks/zod/blob/master/ERROR_HANDLING.md#global-error-map
  * @see https://github.com/colinhacks/zod/blob/cbbfedd15ffbe7d880f52d6becb76dcaef54875f/src/ZodError.ts#L284
  */
-export const ZodErrorMap = ({ children }: ZodErrorMapProps) => {
-  z.setErrorMap(zodCustomErrorMap())
-
-  return <>{children}</>
-}
-```
-
-```tsx:_app.tsx
-import type { AppProps } from 'next/app'
-import { ZodErrorMap } from '@src/libs/validation/ZodErrorMap'
-
 function MyApp({ Component, pageProps }: AppProps) {
+  const { locale } = useLocale()
+  z.setErrorMap(zodCustomErrorMap(locale))
+
   return (
-    <ZodErrorMap>
-      <Component {...pageProps} />
-    </ZodErrorMap>
+    <Component {...pageProps} />
   )
 }
 
 export default MyApp
-```
 
-## ついでにi18n対応する
+```
 
 ### next.jsのデフォルトのi18nの設定をする
 ```js:next.config.js
@@ -539,46 +529,6 @@ export const zodCustomErrorMap =
         return { message: ctx.defaultError }
     }
   }
-```
-
-## localeによってzodのsetErrorMapの値を変えるproviderを作る
-
-```tsx:ZodErrorMap.tsx
-import { ReactElement } from 'react'
-import { useLocale } from '@src/hooks/useLocale'
-import { z } from 'zod'
-import { zodCustomErrorMap } from '@src/libs/validation/zodCustomErrorMap'
-
-type ZodErrorMapProps = Required<{
-  children: ReactElement
-}>
-
-/**
- * @see https://github.com/colinhacks/zod/blob/master/ERROR_HANDLING.md#global-error-map
- * @see https://github.com/colinhacks/zod/blob/cbbfedd15ffbe7d880f52d6becb76dcaef54875f/src/ZodError.ts#L284
- */
-export const ZodErrorMap = ({ children }: ZodErrorMapProps) => {
-  const { locale } = useLocale()
-  z.setErrorMap(zodCustomErrorMap(locale))
-
-  return <>{children}</>
-}
-```
-
-### _app.tsxに読み込ませる
-```tsx:_app.tsx
-import type { AppProps } from 'next/app'
-import { ZodErrorMap } from '@src/libs/validation/ZodErrorMap'
-
-function MyApp({ Component, pageProps }: AppProps) {
-  return (
-    <ZodErrorMap>
-      <Component {...pageProps} />
-    </ZodErrorMap>
-  )
-}
-
-export default MyApp
 ```
 
 ## まとめ
