📕 タイトルと内容にNext.js12.xと明記

--- a/articles/fe9f4ec4a8e691.md
+++ b/articles/fe9f4ec4a8e691.md
@@ -1,10 +1,17 @@
 ---
-title: "Next.jsのLayouts"
+title: "Next.js12.xのLayouts機能"
 emoji: "🤝"
 type: "tech"
 topics: ["nextjs","react","typescript"]
 published: true
 ---
+
+:::message alert
+この記事はNext.js 12.xのLayouts機能です。
+Next.js 13.xのLayoutsについては公式を参照してください
+https://beta.nextjs.org/docs/routing/pages-and-layouts
+:::
+
 Next.jsのLayoutについてTypeScriptの記事を探してもあまり見つからなかったので
 https://nextjs.org/docs/basic-features/layouts
 
